--- a/debian/rules
+++ b/debian/rules
@@ -7,3 +7,7 @@ export PYBUILD_INSTALL_ARGS=--install-lib=/usr/share/iscsi-zfs/ --install-script
 
 %:
 	dh $@ --with python3 --buildsystem=pybuild
+
+override_dh_auto_build:
+	dh_auto_build
+	ronn -r -o . docs/iscsi-zfs.1.ronn
